# ai-proxy

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  config.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-test-runner.py  pyproject.toml  run_tests_direct.py  setup-environment.sh  simple_test.py  test_payload.json  test_runner.sh  wait-for-service.sh
.cursor/: Dockerfile  environment.json
.cursor/commands/: coverage.md  fiil-all-gaps.md  good-commit.md  implement-plan.md  inspect.md
.cursor/rules/: add-test-case.mdc  context-economy-short.mdc  context-economy.mdc  cursor.mdc  edit_file-trubleshooting-with-terminal.mdc  edit_file-trubleshooting.mdc  finding-root-cause.mdc  good-commit.mdc  greetings.mdc  run-tests.mdc  (+12 more)
.kilocode/: system-prompt-clean
ai-docs/: advanced-log-storage.md  big-plan.md  log-storage-migration-plan.md  log-ui-and-analysis-plan.md  outbound-adapter-logging-plan.md  project-plan.md  refactoring-plan.md  streaming-postmortem-and-plan.md
ai_proxy/: main.py
ai_proxy_ui/: __init__.py  main.py
docker-agent-on-cloud/: .dockerignore  Dockerfile
scripts/: analyze_code_size.py  check_module_dependencies.py  container-entrypoint.sh  deploy-production.sh  docker-setup.sh  ensure-deployment-timestamp.sh  logdb  setup-https.sh  test-https.sh  tunnel.sh
tests/: __init__.py  conftest.py
ui/: .eslintrc.cjs  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+133 files in other folders)
